--- a/app/views/activities/_audit_activity.html.erb
+++ b/app/views/activities/_audit_activity.html.erb
@@ -1,4 +1,5 @@
-<li class="activity-feed__item t-activity" id="activity-<%= audit_activity.id %>">
+<% appointment = serialize_resource(audit_activity.appointment) %>
+<li class="list-group-item js-activity t-activity" id="activity-<%= audit_activity.id %>" data-appointment="<%= appointment %>">
   <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
   <b><%= audit_activity.user_name %></b> changed the <%= audit_activity.message %> <em class="badge"><%= time_ago_in_words(audit_activity.created_at) %> ago</em>
 </li>
