--- a/app/views/activities/_message_activity.html.erb
+++ b/app/views/activities/_message_activity.html.erb
@@ -1,4 +1,5 @@
-<li class="activity-feed__item t-activity" id="activity-<%= message_activity.id %>">
+<% appointment = serialize_resource(message_activity.appointment) %>
+<li class="list-group-item js-activity t-activity" id="activity-<%= message_activity.id %>" data-appointment="<%= appointment %>">
   <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
   <b><%= message_activity.user_name %></b> said <em><%= message_activity.message %></em> <em class="badge"><%= time_ago_in_words(message_activity.created_at) %> ago</em>
 </li>
