Fixing names of JS modules after change to GOVUkAdmin modules

--- a/app/views/holidays/edit.html.erb
+++ b/app/views/holidays/edit.html.erb
@@ -13,7 +13,7 @@
       :date_range,
       class: 't-date-range',
       data: {
-        module: 'DateRangePicker',
+        module: 'date-range-picker',
         config: {
           timePicker: true,
           timePickerIncrement: 5,
@@ -31,7 +31,7 @@
       {},
       multiple: 'multiple',
       class: 't-users',
-      data: { module: 'AdvancedSelect' },
+      data: { module: 'advanced-select' },
     )
   %>
   <%= f.submit 'Save', class: 't-save' %>
