--- a/app/views/activities/_create_activity.html.erb
+++ b/app/views/activities/_create_activity.html.erb
@@ -1,4 +1,4 @@
-<li class="activity-feed__item t-activity" id="activity-<%= create_activity.id %>">
-  <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
-  <b><%= create_activity.user_name %></b> <%= create_activity.message %> <em class="badge"><%= time_ago_in_words(create_activity.created_at) %> ago</em>
-</li>
+<% content_for(:activity_message, flush: true) do %>
+  <%= create_activity.message %>
+<% end %>
+<%= render 'activities/activity', activity: create_activity, details: details %>
