--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,10 +1,16 @@
+<ol class="breadcrumb">
+  <li><a href="<%= root_path %>">Home</a></li>
+  <li class="active">My activity</li>
+</ol>
+
+<h1>My activity</h1>
+
 <div class="row t-activity-feed">
   <div class="col-md-12 border-bottom">
-    <h2>My activity</h2>
 
     <div class="activity-feed">
-      <ul class="activity-feed__list" data-module="activity-feed" data-config='{"event": "guider_activity_<%= current_user.id %>"}'>
-        <%= render(@activities) %>
+      <ul class="list-group" data-module="activity-feed" data-config='{"event": "guider_activity_<%= current_user.id %>"}'>
+        <%= render(@activities, details: true) %>
       </ul>
     </div>
   </div>
