--- a/app/views/appointments/edit.html.erb
+++ b/app/views/appointments/edit.html.erb
@@ -1,6 +1,6 @@
 <ol class="breadcrumb">
   <li><a href="<%= root_path %>">Home</a></li>
-  <li><a href="<%= search_appointments_path %>">Search</a></li>
+  <%= breadcrumb_part_for_previous_page %>
   <li class="active">Edit appointment for <%= @appointment.name %></li>
 </ol>
 
