Show BookableSlots on calendars
- guider appointment calendar
- resource calendar

--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -7,6 +7,7 @@
 
 <div
   id="GuiderAppointmentsCalendar"
+  class="t-calendar"
   data-module="guider-appointments-calendar"
   data-default-date="<%= Time.zone.now %>"
   data-guider-id="<%= current_user.id %>"
