--- a/app/views/resource_calendars/show.html.erb
+++ b/app/views/resource_calendars/show.html.erb
@@ -7,7 +7,7 @@
 
 <div
   id="GuidersAppointmentsCalendar"
-  class="guiders-appointments-calendar js-calendar"
+  class="guiders-appointments-calendar js-calendar t-calendar"
   data-config='{"editable": true, "eventDurationEditable": true, "slotDuration": "00:10:00"}'
   data-module="guiders-appointments-calendar"
   data-default-date="<%= Time.zone.now %>">
