--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,3 +47,18 @@
     });
 <% end %>
 </script>
+
+<% if Rails.env.development? || Rails.env.staging? %>
+  <script type="text/javascript">
+    var bugmuncher_options = {
+      api_key: "fe678532af029a3c85a2"
+    };
+    (function(){
+      var e = document.createElement("script");
+      e.setAttribute("type", "text/javascript");
+      var d = new Date(); var n = '?'+d.getFullYear()+(d.getMonth()+1)+d.getDate()+d.getHours();
+      e.setAttribute("src", "//cdn.bugmuncher.com/bugmuncher.js"+n);
+      document.getElementsByTagName("head")[0].appendChild(e);
+    })();
+  </script>
+<% end %>
