--- a/app/views/resource_calendars/show.html.erb
+++ b/app/views/resource_calendars/show.html.erb
@@ -1,9 +1,9 @@
 <ol class="breadcrumb">
   <li><a href="<%= root_path %>">Home</a></li>
-  <li class="active">Appointments</li>
+  <li class="active">Allocations</li>
 </ol>
 
-<h1 class="sr-only">Appointments</h1>
+<h1 class="sr-only">Allocations</h1>
 
 <div
   id="GuidersAppointmentsCalendar"
