Allow filtering on the resource calendar

--- a/app/assets/stylesheets/components/_calendars.scss
+++ b/app/assets/stylesheets/components/_calendars.scss
@@ -1,6 +1,8 @@
 $calendar-today-background: $color-white;
 $calendar-cancelled-background: $color-guardsman-red;
 $calendar-moved-background: $color-green;
+$calendar-filter-box-shadow: transparentize($color-black, .825);
+$calendar-filter-arrow-border: transparentize($color-black, .8);
 
 .holiday-calendar {
   margin-top: 1em;
@@ -88,3 +90,45 @@ $calendar-moved-background: $color-green;
 .fc-event--moved {
   background: $calendar-moved-background;
 }
+
+.resource-calendar-filter {
+  background: $color-white;
+  border-radius: 4px;
+  border: 1px solid $color-silver;
+  box-shadow: 0 6px 12px $calendar-filter-box-shadow;
+  margin-bottom: 10px;
+  padding: 1em;
+  position: absolute;
+  z-index: 100;
+  width: 600px;
+
+  &::before,
+  &::after {
+    border-bottom-color: $calendar-filter-arrow-border;
+    content: "";
+    display: inline-block;
+    position: absolute;
+  }
+
+  &::before {
+    left: 160px;
+    top: -7px;
+    border-right: 7px solid transparent;
+    border-left: 7px solid transparent;
+    border-bottom: 7px solid $color-silver;
+  }
+
+  &::after {
+    left: 161px;
+    top: -6px;
+    border-right: 6px solid transparent;
+    border-bottom: 6px solid $color-white;
+    border-left: 6px solid transparent;
+  }
+}
+
+// scss-lint:disable ImportantRule
+.select2-container {
+  width: 100% !important;
+}
+// scss-lint:enable ImportantRule
