--- a/app/views/resource_calendars/show.html.erb
+++ b/app/views/resource_calendars/show.html.erb
@@ -5,12 +5,26 @@
 
 <h1 class="sr-only">Allocations</h1>
 
+<div id="resource-calendar-filter" class="resource-calendar-filter hide">
+  <%= label_tag(:filter_users, 'Filter by guider/group') %>
+  <%=
+    select_tag(
+      :filter_guiders,
+      grouped_options_for_select(guider_options),
+      multiple: 'multiple',
+      class: 't-users',
+      data: { module: 'advanced-select' }
+    )
+  %>
+</div>
+
 <div
   id="GuidersAppointmentsCalendar"
   class="guiders-appointments-calendar js-calendar t-calendar"
   data-config='{"editable": true, "eventDurationEditable": true, "slotDuration": "00:10:00"}'
   data-module="guiders-appointments-calendar"
-  data-default-date="<%= Time.zone.now %>">
+  data-default-date="<%= Time.zone.now %>"
+  data-filter-select-id="filter_guiders">
 </div>
 
 <div class="action-panel t-action-panel" data-action-panel>
