Change explainer copy for when schedules are in the past.

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -54,8 +54,7 @@
         <% unless schedule.modifiable? %>
           <p>
             <b>
-            This schedule cannot be modified as it is accepting appointments.
-            Create a new schedule to change this guider's bookable slots.
+            This schedule can’t be modified because it is in the past.
             </b>
           </p>
         <% end %>
