--- a/app/views/company_calendars/show.html.erb
+++ b/app/views/company_calendars/show.html.erb
@@ -5,11 +5,14 @@
 
 <h1>Company appointments</h1>
 
+<%= render 'shared/calendar_filter' %>
+
 <div
-  id="GuidersAppointmentsCalendar"
-  class="guiders-appointments-calendar js-calendar"
-  data-module="guiders-appointments-calendar"
-  data-default-date="<%= Time.zone.now %>">
+  id="CompanyCalendar"
+  class="company-calendar js-calendar"
+  data-module="company-calendar"
+  data-default-date="<%= Time.zone.now %>"
+  data-filter-select-id="filter_guiders">
 </div>
 
 <style>
