--- a/app/assets/stylesheets/lib/_colours.scss
+++ b/app/assets/stylesheets/lib/_colours.scss
@@ -3,10 +3,12 @@ $color-alto: #ddd;
 $color-black: #000;
 $color-boston-blue: #3a87ad;
 $color-feijoa: #8fdf82;
+$color-gallery: #ebebeb;
 $color-givry: #f7f2c3;
 $color-green: #0c0;
 $color-guardsman-red: #c00;
 $color-muddy-waters: #bf886e;
+$color-peppermint: #e1f5e1;
 $color-roman: #d9534f;
 $color-silver: #ccc;
 $color-white: #fff;
