--- a/app/views/company_calendars/show.html.erb
+++ b/app/views/company_calendars/show.html.erb
@@ -5,18 +5,20 @@
 
 <h1>Company appointments</h1>
 
-<%= render 'shared/calendar_filter' %>
+<div class="fullscreen-calendar">
+  <%= render 'shared/calendar_filter' %>
 
-<div
-  id="CompanyCalendar"
-  class="company-calendar js-calendar"
-  data-module="company-calendar"
-  data-default-date="<%= Time.zone.now %>"
-  data-filter-select-id="filter_guiders">
+  <div
+    id="CompanyCalendar"
+    class="company-calendar js-calendar"
+    data-module="company-calendar"
+    data-default-date="<%= Time.zone.now %>"
+    data-filter-select-id="filter_guiders">
+  </div>
+
+  <style>
+  [data-resource-id="<%= current_user.id %>"] {
+    background: #fff87c !important;
+  }
+  </style>
 </div>
-
-<style>
-[data-resource-id="<%= current_user.id %>"] {
-  background: #fff87c !important;
-}
-</style>
