--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,10 +25,11 @@
 
   <% if current_user.resource_manager? %>
     <li class="dropdown">
-      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Availability <span class="caret"></span></a>
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Guiders <span class="caret"></span></a>
       <ul class="dropdown-menu">
-        <%= active_link_to 'Groups & schedules', users_path, wrap_tag: :li %>
+        <%= active_link_to 'Groups & schedules', users_path, wrap_tag: :li, active: :exclusive %>
         <%= active_link_to 'Holidays & unavailability', holidays_path, wrap_tag: :li %>
+        <%= active_link_to 'Display order', sort_users_path, wrap_tag: :li %>
       </ul>
     </li>
   <% end %>
