--- a/app/views/appointments/search.html.erb
+++ b/app/views/appointments/search.html.erb
@@ -61,6 +61,10 @@
             <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
             <span class="sr-only">Reschedule appointment</span>
           <% end %>
+          <%= link_to new_appointment_path(copy_from: result), title: 'Rebook appointment', class: 'btn btn-info t-rebook' do %>
+            <span class="glyphicon glyphicon-copy" aria-hidden="true"></span>
+            <span class="sr-only">Rebook appointment</span>
+          <% end %>
         </td>
       </tr>
     <% end %>
