Style flash message alerts, and fade out on AJAX success

--- a/app/views/resource_calendars/show.html.erb
+++ b/app/views/resource_calendars/show.html.erb
@@ -6,7 +6,7 @@
 <h1 class="sr-only">Allocations</h1>
 
 <div class="alert alert-success js-saved-changes t-saved-changes" role="alert" style="display:none;">
-  Your changes have been saved
+  <span class="glyphicon glyphicon-ok"></span> your changes have been saved
 </div>
 
 <%= render 'shared/calendar_filter' %>
