Handle AJAX failures and display appropriate message

--- a/app/views/resource_calendars/show.html.erb
+++ b/app/views/resource_calendars/show.html.erb
@@ -6,7 +6,11 @@
 <h1 class="sr-only">Allocations</h1>
 
 <div class="alert alert-success js-saved-changes t-saved-changes" role="alert" style="display:none;">
-  <span class="glyphicon glyphicon-ok"></span> your changes have been saved
+  <span class="glyphicon glyphicon-ok"></span> Changes saved.
+</div>
+
+<div class="alert alert-danger js-saved-changes t-saved-changes" role="alert" style="display:none;">
+  <span class="glyphicon glyphicon-alert"></span> Unable to save changes. Please try again.
 </div>
 
 <%= render 'shared/calendar_filter' %>
