Only use the floating 'fixed' flash message style on allocations
As we use AJAX-style saving on this calendar, it makes sense to
flash the message and then fade it out. But on other pages
this just looks a little strange, so they get the standard
full width, block style message.

--- a/app/assets/stylesheets/components/_alert.scss
+++ b/app/assets/stylesheets/components/_alert.scss
@@ -1,9 +1,12 @@
 .alert {
   border-width: 5px;
   font-size: 130%;
-  position: fixed;
-  margin-top: 120px;
   min-width: 33%;
   top: 0;
+}
+
+.alert--fixed {
+  margin-top: 120px;
+  position: fixed;
   z-index: 1000;
 }
