--- a/app/views/resource_calendars/show.html.erb
+++ b/app/views/resource_calendars/show.html.erb
@@ -5,11 +5,11 @@
 
 <h1 class="sr-only">Allocations</h1>
 
-<div class="alert alert-success js-saved-changes t-saved-changes" role="alert" style="display:none;">
+<div class="alert alert--fixed alert-success js-saved-changes t-saved-changes" role="alert" style="display:none;">
   <span class="glyphicon glyphicon-ok"></span> Changes saved.
 </div>
 
-<div class="alert alert-danger js-saved-changes t-saved-changes" role="alert" style="display:none;">
+<div class="alert alert--fixed alert-danger js-saved-changes t-saved-changes" role="alert" style="display:none;">
   <span class="glyphicon glyphicon-alert"></span> Unable to save changes. Please try again.
 </div>
 
