Ensure our calendar styles apply to month views
We need to be quite specific to override FullCalendar's styles.

--- a/app/assets/stylesheets/components/_calendars.scss
+++ b/app/assets/stylesheets/components/_calendars.scss
@@ -116,6 +116,7 @@ $calendar-bookable-slot-background: $color-peppermint;
   @include striped($calendar-appointment-moved-background);
 }
 
+.fc-day-grid,
 .fc-time-grid,
 .fc-time-area {
   .fc-event--holiday,
