increase darkness of background events on calendars

--- a/app/assets/stylesheets/components/_calendars.scss
+++ b/app/assets/stylesheets/components/_calendars.scss
@@ -8,9 +8,9 @@ $calendar-appointment-background: $color-boston-blue;
 $calendar-appointment-cancelled-background: $color-muddy-waters;
 $calendar-appointment-moved-background: $color-green;
 $calendar-holiday-anchor-visited: $color-white;
-$calendar-holiday-background: $color-gallery;
+$calendar-holiday-background: $color-alto;
 $calendar-schedule-background: $color-xanadu;
-$calendar-bookable-slot-background: $color-peppermint;
+$calendar-bookable-slot-background: $color-madang;
 
 .holiday-calendar {
   margin-top: 1em;
