--- a/app/assets/stylesheets/lib/_colours.scss
+++ b/app/assets/stylesheets/lib/_colours.scss
@@ -7,8 +7,8 @@ $color-gallery: #ebebeb;
 $color-givry: #f7f2c3;
 $color-green: #0c0;
 $color-guardsman-red: #c00;
+$color-madang: #c6f5c6;
 $color-muddy-waters: #bf886e;
-$color-peppermint: #e1f5e1;
 $color-roman: #d9534f;
 $color-silver: #ccc;
 $color-white: #fff;
