Rename GuidersAppointments to Allocations everywhere

--- a/app/views/users/sort.html.erb
+++ b/app/views/users/sort.html.erb
@@ -6,7 +6,7 @@
 <h1>Guider display order</h1>
 
 <p>
-  Drag guiders around to control the order they are displayed on the <a href="<%= resource_calendar_path %>">Allocations Calendar</a>.
+  Drag guiders around to control the order they are displayed on the <a href="<%= allocations_path %>">Allocations Calendar</a>.
 </p>
 
 <%= form_for :order_users, layout: :basic do |f| %>
