--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
       <%= active_link_to 'Book appointment', new_appointment_path, wrap_tag: :li %>
 
       <% if current_user.resource_manager? %>
-        <%= active_link_to 'Allocations', resource_calendar_path, wrap_tag: :li %>
+        <%= active_link_to 'Allocations', allocations_path, wrap_tag: :li %>
       <% end %>
     </ul>
   </li>
