--- a/app/views/appointments/search.html.erb
+++ b/app/views/appointments/search.html.erb
@@ -37,6 +37,7 @@
       <th>Created</th>
       <th>First Name</th>
       <th>Last Name</th>
+      <th>Guider</th>
       <th>Appointment Date/Time</th>
       <th>Status</th>
       <th width="1%">Actions</th>
@@ -46,10 +47,11 @@
     <% @results.each do |result| %>
       <% result = AppointmentPresenter.new(result) %>
       <tr class='t-result'>
-        <td class='t-id'><span class="id"><%= result.id %></span></td>
+        <td class='t-id'><span class="id">#<%= result.id %></span></td>
         <td><%= result.created_at %></td>
         <td><%= result.first_name %></td>
         <td><%= result.last_name %></td>
+        <td><%= result.guider_name %></td>
         <td><%= result.date %></td>
         <td><%= result.status %></td>
         <td nowrap="true">
