Validate invalid date of births
For example 31st February was being converted to 3rd May.

--- a/app/views/shared/_date_of_birth_form_field.html.erb
+++ b/app/views/shared/_date_of_birth_form_field.html.erb
@@ -51,6 +51,9 @@
         )
       %>
     </label>
+    <% form.object.errors[:date_of_birth].each do |message| %>
+      <div class="text-danger"><%= message %></div>
+    <% end %>
   <% end %>
   <span class="bg-info form-dob__age" id="js-customer-age"></span>
 </div>
