--- a/app/views/schedules/_form.html.erb
+++ b/app/views/schedules/_form.html.erb
@@ -31,9 +31,9 @@
       %>
     </div>
     <div class="col-sm-9 text-right">
-      <label aria-hidden="true">Add common slots:</label>
+      <label for="early-slots" aria-hidden="true">Add common slots:</label>
       <div class="btn-group" role="group" aria-label="Add Common Slots" id="calendar-common">
-        <button type="button" class="btn btn-default" data-events='[
+        <button type="button" id="early-slots" class="btn btn-default" data-events='[
           { "start": "08:30", "end": "09:40" },
           { "start": "09:50", "end": "11:00" },
           { "start": "11:20", "end": "12:30" },
