--- a/app/views/shared/_calendar_filter.html.erb
+++ b/app/views/shared/_calendar_filter.html.erb
@@ -1,5 +1,5 @@
 <div id="resource-calendar-filter" class="resource-calendar-filter hide">
-  <%= label_tag(:filter_users, 'Filter by guider/group') %>
+  <%= label_tag(:filter_guiders, 'Filter by guider/group') %>
   <%=
     select_tag(
       :filter_guiders,
