--- a/app/views/shared/_date_of_birth_form_field.html.erb
+++ b/app/views/shared/_date_of_birth_form_field.html.erb
@@ -1,13 +1,18 @@
-<% start_year = 120.years.ago %>
+<%
+  start_year = 120.years.ago
+  form_element_day_id = "#{form.object_name}_date_of_birth_3i"
+  form_element_month_id = "#{form.object_name}_date_of_birth_2i"
+  form_element_year_id = "#{form.object_name}_date_of_birth_1i"
+%>
 
 <div class="form-dob clearfix" data-module="customer-age" data-output-id="js-customer-age">
   <%= field_with_errors_wrapper(form, :date_of_birth, 'form-dob__inputs-container') do %>
-    <label>
+    <label for="<%= form_element_day_id %>">
       <span class="sr-only">Date of birth</span> <%= required_label(:day) %>
       <%=
         form.number_field(
           'date_of_birth(3i)',
-          id: "#{form.object_name}_date_of_birth_3i",
+          id: form_element_day_id,
           use_label: false,
           value: form.object.date_of_birth.try(:day),
           placeholder: 'DD',
@@ -19,12 +24,12 @@
         )
       %>
     </label>
-    <label>
+    <label for="<%= form_element_month_id %>">
       <span class="sr-only">Date of birth</span> <%= required_label(:month) %>
       <%=
         form.number_field(
           'date_of_birth(2i)',
-          id: "#{form.object_name}_date_of_birth_2i",
+          id: form_element_month_id,
           use_label: false,
           value: form.object.date_of_birth.try(:month),
           placeholder: 'MM',
@@ -35,12 +40,12 @@
         )
       %>
     </label>
-    <label>
+    <label for="<%= form_element_year_id %>">
       <span class="sr-only">Date of birth</span> <%= required_label(:year) %>
       <%=
         form.number_field(
           'date_of_birth(1i)',
-          id: "#{form.object_name}_date_of_birth_1i",
+          id: form_element_year_id,
           use_label: false,
           value: form.object.date_of_birth.try(:year),
           placeholder: 'YYYY',
