Remove clear button on report dropdown which is not needed

--- a/app/views/appointment_reports/new.html.erb
+++ b/app/views/appointment_reports/new.html.erb
@@ -12,7 +12,7 @@
       options_for_select(@where_options),
       {},
       class: 't-where',
-      data: { module: 'advanced-select' }
+      data: { module: 'advanced-select', config: { allowClear: false } }
     )
   %>
   <%=
