--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -4,9 +4,11 @@
 </ol>
 
 <h1>Book an appointment</h1>
+<%= rebooked_from_heading(@appointment) %>
 
 <%= render 'shared/required_fields_note' %>
 <%= form_for @appointment, layout: :basic do |f| %>
+  <%= f.hidden_field :rebooked_from_id %>
   <div class="row form-group">
     <div class="col-md-12">
       <h2>Date of birth</h2>
