Rerender edit page after editing an appointment
Also, change the way that we store the previous page so that we can
always show the correct breadcrumb on appointments#edit.

--- a/app/views/appointments/edit.html.erb
+++ b/app/views/appointments/edit.html.erb
@@ -1,4 +1,4 @@
-<ol class="breadcrumb">
+<ol class="breadcrumb t-breadcrumb">
   <li><a href="<%= root_path %>">Home</a></li>
   <%= breadcrumb_part_for_previous_page %>
   <li class="active">Edit appointment for <%= @appointment.name %></li>
