Dragging an area on the resource calendar to add a holiday

--- a/app/assets/stylesheets/components/_calendars.scss
+++ b/app/assets/stylesheets/components/_calendars.scss
@@ -82,6 +82,11 @@ $guider-row-height: 120px;
       border-style: none !important; // scss-lint:disable ImportantRule
     }
   }
+
+  .fc-highlight {
+    background: $calendar-holiday-background;
+    opacity: 1;
+  }
 }
 
 .company-calendar--fullscreen {
