only link activity feed items from my activity page
- On the edit page, each activity was a link back to the same page
  this is not great for screen reader users, when they view the
  list of available links on the page.

--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -7,11 +7,11 @@
 
 <div class="row t-activity-feed">
   <div class="col-md-12 border-bottom">
-
-    <div class="activity-feed">
-      <ul class="list-group" data-module="activity-feed" data-config='{"event": "guider_activity_<%= current_user.id %>"}'>
+    <div class="activity-feed activity-feed--with-links">
+      <div class="list-group" data-module="activity-feed" data-config='{"event": "guider_activity_<%= current_user.id %>"}'>
         <%= render(@activities, details: true) %>
-      </ul>
+      </div>
     </div>
   </div>
 </div>
+
