Turning breadcrumb into a partial and improving markup
- improved markup for accessibility
- reduce repetition in templates
- added 'breadcrumb for previous page' functionality for
  the allocations page

--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,7 +1,4 @@
-<ol class="breadcrumb">
-  <li><a href="<%= root_path %>">Home</a></li>
-  <li class="active">My activity</li>
-</ol>
+<%= breadcrumb( { title: 'My activity' } ) %>
 
 <h1>My activity</h1>
 
