--- a/app/views/allocations/show.html.erb
+++ b/app/views/allocations/show.html.erb
@@ -1,7 +1,4 @@
-<ol class="breadcrumb">
-  <li><a href="<%= root_path %>">Home</a></li>
-  <li class="active">Allocations</li>
-</ol>
+<%= breadcrumb( { title: 'Allocations' } ) %>
 
 <h1 class="sr-only">Allocations</h1>
 
