--- a/app/views/appointment_reports/new.html.erb
+++ b/app/views/appointment_reports/new.html.erb
@@ -1,7 +1,4 @@
-<ol class="breadcrumb">
-  <li><a href="<%= root_path %>">Home</a></li>
-  <li class="active">Generate an appointment report</li>
-</ol>
+<%= breadcrumb( { title: 'Generate an appointment report' } ) %>
 
 <h1>Generate an appointment report</h1>
 
