--- a/app/views/appointments/search.html.erb
+++ b/app/views/appointments/search.html.erb
@@ -1,9 +1,6 @@
-<ol class="breadcrumb">
-  <li><a href="<%= root_path %>">Home</a></li>
-  <li class="active">Search</li>
-</ol>
+<%= breadcrumb( { title: 'Appointment search' } ) %>
 
-<h1>Search</h1>
+<h1>Appointment search</h1>
 
 <div class="row form-group">
   <div class="col-md-12">
