--- a/app/views/holidays/index.html.erb
+++ b/app/views/holidays/index.html.erb
@@ -1,7 +1,4 @@
-<ol class="breadcrumb">
-  <li><a href="<%= root_path %>">Home</a></li>
-  <li class="active">Holidays</li>
-</ol>
+<%= breadcrumb( { title: 'Holidays' } ) %>
 
 <h1>Holidays</h1>
 
