--- a/app/views/schedules/edit.html.erb
+++ b/app/views/schedules/edit.html.erb
@@ -1,9 +1,9 @@
-<ol class="breadcrumb">
-  <li><a href="<%= root_path %>">Home</a></li>
-  <li><a href="<%= users_path %>">Manage guiders</a></li>
-  <li><a href="<%= edit_user_path(@guider) %>">Manage schedules for <%=@guider.name %></a></li>
-  <li class="active">Edit schedule <%=@schedule.title %> for <%=@guider.name %></li>
-</ol>
+<%= breadcrumb(
+  { title: 'Manage guiders', path: users_path },
+  { title: "Manage schedules for #{@guider.name}", path: edit_user_path(@guider) },
+  { title: "Edit schedule #{@schedule.title} for #{@guider.name}" }
+)
+%>
 
 <h1>Edit schedule <%=@schedule.title %> for <%=@guider.name %></h1>
 
