--- a/app/views/schedules/new.html.erb
+++ b/app/views/schedules/new.html.erb
@@ -1,10 +1,10 @@
-<ol class="breadcrumb">
-  <li><a href="<%= root_path %>">Home</a></li>
-  <li><a href="<%= users_path %>">Manage guiders</a></li>
-  <li><a href="<%= edit_user_path(@guider) %>">Edit User &quot;<%=@guider.name %>&quot;</a></li>
-  <li class="active">New Schedule</li>
-</ol>
+<%= breadcrumb(
+  { title: 'Manage guiders', path: users_path },
+  { title: "Manage schedules for #{@guider.name}", path: edit_user_path(@guider) },
+  { title: "New schedule for #{@guider.name}" }
+)
+%>
 
-<h1>New schedule for "<%=@guider.name %>"</h1>
+<h1>New schedule for <%=@guider.name %></h1>
 
 <%= render "form" %>
