--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,4 @@
-<ol class="breadcrumb">
-  <li><a href="<%= root_path %>">Home</a></li>
-  <li class="active">Manage guiders</li>
-</ol>
+<%= breadcrumb( { title: 'Manage guiders' } ) %>
 
 <h1>Manage guiders</h1>
 
