--- a/app/views/users/sort.html.erb
+++ b/app/views/users/sort.html.erb
@@ -1,7 +1,4 @@
-<ol class="breadcrumb">
-  <li><a href="<%= root_path %>">Home</a></li>
-  <li><a href="<%= sort_users_path %>">Guider display order</a></li>
-</ol>
+<%= breadcrumb( { title: 'Guider display order' } ) %>
 
 <h1>Guider display order</h1>
 
