--- a/app/views/utilisation_reports/new.html.erb
+++ b/app/views/utilisation_reports/new.html.erb
@@ -1,7 +1,4 @@
-<ol class="breadcrumb">
-  <li><a href="<%= root_path %>">Home</a></li>
-  <li class="active">Generate a utilisation report</li>
-</ol>
+<%= breadcrumb( { title: 'Generate a utilisation report' } ) %>
 
 <h1>Generate a utilisation report</h1>
 
