--- a/app/views/company_calendars/show.html.erb
+++ b/app/views/company_calendars/show.html.erb
@@ -1,7 +1,4 @@
-<ol class="breadcrumb">
-  <li><a href="<%= root_path %>">Home</a></li>
-  <li class="active">Company appointments</li>
-</ol>
+<%= breadcrumb( { title: 'Company appointments' } ) %>
 
 <h1>Company appointments</h1>
 
