--- a/app/views/holidays/new.html.erb
+++ b/app/views/holidays/new.html.erb
@@ -1,8 +1,8 @@
-<ol class="breadcrumb">
-  <li><a href="<%= root_path %>">Home</a></li>
-  <li class="active"><a href="<%= holidays_path %>">Holidays</a></li>
-  <li class="active">Create a holiday</li>
-</ol>
+<%= breadcrumb(
+  { title: 'Holidays', path: holidays_path },
+  { title: 'Create a holiday' }
+)
+%>
 
 <h1>Create a holiday</h1>
 
