--- a/app/views/my_appointments/show.html.erb
+++ b/app/views/my_appointments/show.html.erb
@@ -1,7 +1,4 @@
-<ol class="breadcrumb">
-  <li><a href="<%= root_path %>">Home</a></li>
-  <li class="active">My appointments</li>
-</ol>
+<%= breadcrumb( { title: 'My appointments' } ) %>
 
 <h1>My appointments</h1>
 
