--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,8 +1,8 @@
-<ol class="breadcrumb">
-  <li><a href="<%= root_path %>">Home</a></li>
-  <li><a href="<%= users_path %>">Manage guiders</a></li>
-  <li class="active">Manage schedules for <%=@guider.name %></li>
-</ol>
+<%= breadcrumb(
+  { title: 'Manage guiders', path: users_path },
+  { title: "Manage schedules for #{@guider.name}" }
+)
+%>
 
 <h1>Manage schedules for <%=@guider.name %></h1>
 
