Added nav tag around pagination to improve accessibility

--- a/app/views/appointments/search.html.erb
+++ b/app/views/appointments/search.html.erb
@@ -72,4 +72,7 @@
     <% end %>
   </tbody>
 </table>
-<%= paginate @results %>
+
+<nav aria-label="Pagination">
+  <%= paginate @results %>
+</nav>
