--- a/app/views/appointments/reschedule.html.erb
+++ b/app/views/appointments/reschedule.html.erb
@@ -6,26 +6,10 @@
 <h1>Reschedule an appointment for <%= @appointment.name %></h1>
 
 <%= render 'shared/required_fields_note' %>
-
 <%= form_for [@appointment], url: appointment_update_reschedule_path(@appointment), layout: :basic do |f| %>
   <div class="row form-group">
     <div class="col-md-12">
-      <h2>Choose available slot <%= required_label %></h2>
-      <% if @appointment.errors[:guider].any? %>
-        <p class="text-danger js-slot-unavailable-message t-slot-unavailable-message">
-          Unable to assign appointment to a slot, please chooose a slot.
-        </p>
-      <% end %>
-      <div
-        id="AppointmentAvailabilityCalendar"
-        class="appointment-availability-calendar"
-        data-module="appointment-availability-calendar"
-        data-available-slots-path="<%= available_bookable_slots_path %>"
-        data-default-date="<%= BookableSlot.next_valid_start_date %>"
-      ></div>
-      <input type="hidden" name="available-slots-json" class="slots-data" value="<%= @available_slots_json %>">
-      <%= f.hidden_field :start_at, value: nil, data: { 'selected-start': true }, class: 't-start-at' %>
-      <%= f.hidden_field :end_at, value: nil, data: { 'selected-end': true }, class: 't-end-at' %>
+      <%= render 'availability_calendar', form: f %>
     </div>
   </div>
   <div class="row form-group">
