--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,9 @@
         <%= active_link_to 'Display order', sort_users_path, wrap_tag: :li %>
       </ul>
     </li>
+  <% end %>
+
+  <% if current_user.resource_manager? || current_user.contact_centre_team_leader? %>
     <li class="dropdown">
       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Reports <span class="caret"></span></a>
       <ul class="dropdown-menu">
