--- a/app/assets/stylesheets/helper/_bootstrap_overrides.scss
+++ b/app/assets/stylesheets/helper/_bootstrap_overrides.scss
@@ -1,7 +1,14 @@
+$mark-colour: #faf785;
+
 .breadcrumb > .active {
   color: $color-black;
 }
 
 .breadcrumb > li + li::before {
   color: $color-black;
+}
+
+mark,
+.mark {
+  background-color: $mark-colour;
 }
